--- a/index.html
+++ b/index.html
@@ -79,7 +79,15 @@
     allowfullscreen
     style="display:block; margin:20px auto; max-width:100%; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.2);"
 ></iframe>
-  
+ <div class="home-buttons">
+  <a href="about.html">পরিচিতি</a>
+  <a href="publications.html">মৌলিক প্রকাশনা</a>
+  <a href="gallery.html">ছবিঘর</a>
+  <a href="committee.html">কমিটি</a>
+  <a href="presidents.html">সাবেক সভাপতিবৃন্দ</a>
+  <a href="contact.html">যোগাযোগ</a>
+  <a href="donation.html">ডোনেশন</a>
+</div>
 <!-- ===============================
      Parabar Pathagar Section
 ================================= -->
