--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
  <div class="home-buttons">
   <a href="about.html">পরিচিতি</a>
   <a href="publications.html">মৌলিক প্রকাশনা</a>
+ <a href="contact.html">যোগাযোগ</a>
   <a href="gallery.html">ছবিঘর</a>
-  <a href="committee.html">কমিটি</a>
-  <a href="presidents.html">সাবেক সভাপতিবৃন্দ</a>
-  <a href="contact.html">যোগাযোগ</a>
+  <a href="committee.html"> পরিচালনা পরিষদ </a>
+ 
   <a href="donation.html">ডোনেশন</a>
 </div>
 <!-- ===============================
